syntax = "proto3";

service SocketMService {
    rpc NspBroadcast (NspBroadcastReq) returns (NspBroadcastResp);
    rpc NspRoomsBroadcast (NspRoomsBroadcastReq) returns (NspRoomsBroadcastResp);
    rpc NspUsersBroadcast (NspUsersBroadcastReq) returns (NspUsersBroadcastResp);
    // rpc NspRoomsBroadcast (NspRoomsBroadcastReq) returns (NspRoomsBroadcastResp);
    rpc Deactive (DeactiveReq) returns (DeactiveResp);
    rpc ClearRoom (ClearRoomReq) returns (ClearRoomResp);
}

message NspBroadcastReq {

}

message NspBroadcastResp {

}

message NspRoomsBroadcastReq {

}

message NspRoomsBroadcastResp {

}